--- a/01-HTML-CSS/09-animations/group - Or Noa Etan/style.scss
+++ b/01-HTML-CSS/09-animations/group - Or Noa Etan/style.scss
@@ -25,10 +25,16 @@ body {
         border-radius: 10px;
         margin-left: 50px;
         margin-top: 20px;
+        &:hover{
+          cursor: pointer;
+        }
       }
 
       h1 {
         font-weight: 700;
+        &:hover{
+          cursor: pointer;
+        }
       }
 
       span {
@@ -45,14 +51,16 @@ body {
         margin-right: auto;
         font-size: 25px;
         border-radius: 5px;
-        height: 50px;
+        height: 45px;
         width: 80vw;
+        
       }
     }
 
     &__task {
       display: flex;
       flex-direction: column;
+      
       span{
         font-weight: bolder;
       }
@@ -62,6 +70,12 @@ body {
         justify-content: space-between;
         align-items: center;
         font-weight: bold;
+      }
+      h2:hover{
+        cursor: pointer;
+      }
+      p:hover{
+        cursor: pointer;
       }
 
       .left {
@@ -74,6 +88,8 @@ body {
         height: 50px;
         width: 50px;
         border-radius: 5px;
+        transition: 1s;
+
 
         &__1 {
           background-color: #ffc898;
@@ -90,6 +106,11 @@ body {
         i {
           margin-left: 13px;
           margin-top: 13px;
+          transition: all .5s;
+          &:hover{
+            cursor: pointer;
+            transform: rotate(360deg);
+          }
         }
       }
     }
@@ -98,6 +119,9 @@ body {
       display: flex;
       align-items: center;
       justify-content: space-between;
+      &:hover{
+        cursor: pointer;
+      }
     }
   }
 
