--- a/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/style.scss
+++ b/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/style.scss
@@ -85,7 +85,7 @@ body {
   }
 }
 
-@media only screen and (max-width:1000px){ 
+@media only screen and (max-width:1200px){ 
   .Container {
     grid-template-columns: 1fr;
     grid-template-rows: 0.1fr auto 0.1fr;
@@ -103,10 +103,10 @@ body {
   }
 }
 
-@media only screen and (min-width:1000px){ 
+@media only screen and (min-width:1200px){ 
   .Container {
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 0.1fr auto 0.1fr;
+    grid-template-rows: 0.1fr auto;
     grid-template-areas:
     "header"
     "Wil Roi Yael";
