--- a/01-HTML-CSS/09-animations/group - Or Noa Etan/nav.scss
+++ b/01-HTML-CSS/09-animations/group - Or Noa Etan/nav.scss
@@ -72,8 +72,6 @@ nav ul {
     flex-direction: row;
     right: 20vw;
     
-    
-    text-transform: capitalize;
 
 
     &-square {
@@ -152,6 +150,16 @@ nav ul {
       
     }
   }
+}
+span{
+  opacity: 0;
+  transition: all 0.4s ease;
+  transform: translateY(50px);
+  display: inline-block;
+}
+.fade{
+  opacity: 1;
+  transform: translateY(0px);
 }
 
 // KEYFRAMES
