--- a/01-HTML-CSS/09-animations/group - Or Noa Etan/style.scss
+++ b/01-HTML-CSS/09-animations/group - Or Noa Etan/style.scss
@@ -4,7 +4,6 @@ body {
   height: auto;
   width: 100vw;
 }
-
 #landing {
   padding-top: 1.5rem;
   width: 100vw;
@@ -14,6 +13,7 @@ body {
 
   &-home {
     height: 100vh;
+    background: white;
     padding: 30px;
 
     &__logo {
@@ -25,21 +25,15 @@ body {
         border-radius: 10px;
         margin-left: 50px;
         margin-top: 20px;
-        &:hover{
-          cursor: pointer;
-        }
       }
 
       h1 {
         font-weight: 700;
-        &:hover{
-          cursor: pointer;
-        }
       }
 
       span {
         font-size: 1rem;
-        font-weight: bold;
+        font-weight: normal;
       }
     }
 
@@ -50,37 +44,19 @@ body {
         margin-left: auto;
         margin-right: auto;
         font-size: 25px;
-        border-radius: 5px;
-        height: 45px;
-        width: 80vw;
-        
+        border-radius: 10px;
+        height: 50px;
       }
     }
 
     &__task {
       display: flex;
       flex-direction: column;
-      
-      span{
-        font-weight: bolder;
-      }
 
       .task {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        font-weight: bold;
-      }
-      h2:hover{
-        cursor: pointer;
-      }
-      p:hover{
-        cursor: pointer;
-      }
-
-      .left {
-        margin-right: auto;
-        margin-left: 1rem;
       }
 
       .icon {
@@ -88,8 +64,6 @@ body {
         height: 50px;
         width: 50px;
         border-radius: 5px;
-        transition: 1s;
-
 
         &__1 {
           background-color: #ffc898;
@@ -106,30 +80,20 @@ body {
         i {
           margin-left: 13px;
           margin-top: 13px;
-          transition: all .5s;
-          &:hover{
-            cursor: pointer;
-            transform: rotate(360deg);
-          }
         }
       }
     }
 
-   .recent__title {
+    &__recent__title {
       display: flex;
       align-items: center;
       justify-content: space-between;
-      &:hover{
-        cursor: pointer;
-      }
     }
   }
-
   //------------Etan
   //----- already created description boxes
   &__task {
     overflow-y: hidden;
-
     &-count {
       display: flex;
       flex-direction: row;
@@ -137,7 +101,6 @@ body {
       background: #f0f0f2;
       height: fit-content;
       overflow-y: scroll;
-
       &:nth-child(1) {
         margin-left: 1.5rem;
       }
@@ -170,12 +133,10 @@ body {
           padding: 0;
           line-height: 0.1ch;
         }
-
         &__header {
           display: flex;
           flex-direction: row;
         }
-
         &__title {
           display: flex;
           flex-direction: column;
@@ -188,7 +149,6 @@ body {
             font-weight: 600;
             font-size: 1rem;
           }
-
           &-urg {
             opacity: 50%;
             margin-bottom: 0;
@@ -202,7 +162,6 @@ body {
           font-weight: 700;
           font-size: 1.5rem;
           margin: 0;
-
           &-square {
             width: 3ch;
             height: 3ch;
@@ -215,29 +174,23 @@ body {
             align-self: center;
           }
         }
-
         .blue {
           background-color: #a7ebf2;
         }
-
         .orange {
           background-color: #f2b694;
         }
-
         &__expln {
           display: flex;
           flex-direction: column;
           align-items: flex-start;
           line-height: 1.5rem;
-
-
           h4 {
             margin-top: 1.5rem;
             margin-bottom: 0;
             font-weight: 600 bold;
             font-size: 1.1rem;
           }
-
           &-transp {
             opacity: 30%;
             margin-bottom: 0;
@@ -246,8 +199,6 @@ body {
         }
       }
     }
-
-
     // ------ adding description box
 
     &__descr {
@@ -262,7 +213,6 @@ body {
       padding: 1.5rem;
       margin: 2rem;
       background-color: #f0f0f2;
-
       &:hover {
         cursor: pointer;
       }
@@ -277,14 +227,13 @@ body {
         flex-direction: column;
         align-content: center;
 
-        &>h3,
+        & > h3,
         p {
           margin: 0.1rem;
           padding: 0;
         }
       }
     }
-
     //--------- Calendar
     &__cal {
       padding: 0;
@@ -310,7 +259,6 @@ body {
         padding: 2vw 0rem 5vw 0rem;
         box-shadow: 0.5 rem 3rem rgba($color: #000000, $alpha: 0.4);
       }
-
       &__title {
         height: 6rem;
         width: 100vw;
@@ -320,14 +268,12 @@ body {
         align-items: center;
         text-align: center;
         text-shadow: 0.15rem 0.25rem rgba(0, 0, 0, 0.2);
-
         i {
           font-size: 1.25rem;
           cursor: pointer;
           margin-left: auto;
           margin-right: 1.5rem;
         }
-
         h1 {
           font-size: 1.5rem;
           font-weight: 400;
@@ -335,12 +281,11 @@ body {
           letter-spacing: 0.1rem;
           padding: 0;
         }
-
         svg {
           margin: 1.5rem;
         }
       }
-
+      
       &__weekdays {
         width: 100vw;
         height: 2.5rem;
@@ -358,7 +303,6 @@ body {
           margin: auto;
         }
       }
-
       &__days {
         width: 100%;
         height: 100%;
@@ -375,10 +319,8 @@ body {
         transition: background-color 0.2s;
 
         @media only screen and (min-width: 600px) {
-          padding: 0 2vw;
-          ;
+          padding: 0 2vw;;
         }
-
         div {
           height: fit-content;
           line-height: 3vh;
@@ -394,7 +336,6 @@ body {
               font-weight: bolder;
             }
           }
-
           & p {
             margin: 0;
           }
@@ -404,20 +345,17 @@ body {
         .next-date {
           opacity: 0.5;
         }
-
         .assigned {
           display: flex;
           flex-direction: column;
-
+          
           column-gap: 0;
           text-align: center;
           justify-content: space-around;
-
           p {
             line-height: 1.5vh;
           }
         }
-
         .today {
           font-weight: bolder;
           color: white;
@@ -431,7 +369,6 @@ body {
     }
   }
 }
-
 .iconify {
   padding: 0;
 }
@@ -446,6 +383,16 @@ main {
   background-color: #f0f0f2;
 }
 
+span{
+  opacity: 0;
+  transition: all 0.4s ease;
+  transform: translateY(50px);
+  display: inline-block;
+}
+.fade{
+  opacity: 1;
+  transform: translateY(0px);
+}
 //icon styles, use as
 .md-18 {
   font-size: 18px;
