--- a/01-HTML-CSS/03-position/HomeTasks/Shani/style.css
+++ b/01-HTML-CSS/03-position/HomeTasks/Shani/style.css
@@ -1,238 +1,208 @@
-html, body {
+html,
+body {
     width: 100%;
-    height:100%;
-  }
-  
-  body {
-      background-image: linear-gradient(-45deg,
-       #bd52ee,
-        #3c86e7,
-         #41ccff,
-          #23d5ab,
-          rgb(9, 158, 133));
-      background-size: 400% 400%;
-      animation: gradient 15s ease infinite;
-  }
-  
-  @keyframes gradient {
-      0% {
-          background-position: 0% 50%;
-      }
-      50% {
-          background-position: 100% 50%;
-      }
-      100% {
-          background-position: 0% 50%;
-      }
-  }
-  
-  
+    height: 100%;
+}
 
+body {
+    background-image: linear-gradient(-45deg, #bd52ee, #3c86e7, #41ccff, #23d5ab, rgb(9, 158, 133));
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
+}
 
-.header{
-    background-image: url("header.jpg");   
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
+.header {
+    background-image: url("header.jpg");
     height: 100%;
     background-repeat: no-repeat;
-    background-size:cover;
+    background-size: cover;
     background-position: center;
     opacity: 1.0;
-    left:0px;
-    top:0px;
-    
+    left: 0px;
+    top: 0px;
 }
-body>.box.header{
+
+body>.box.header {
     text-align: center;
     position: fixed;
-    width:100vw;
+    width: 100vw;
     height: 7vh;
     padding-top: 30px;
     color: rgb(182, 246, 255);
     font-family: Consolas;
-    font-size:30px;
+    font-size: 30px;
     z-index: 100;
     letter-spacing: 20px;
-    text-shadow:
-      0 0 7px #fff,
-      0 0 10px #fff,
-      0 0 21px rgb(42, 255, 227),
-      0 0 42px #0fa,
-      0 0 82px #0fa,
-      0 0 92px #0fa,
-      0 0 102px rgb(16, 255, 203),
-      0 0 151px rgb(26, 255, 179);
-    
-
+    text-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 21px rgb(42, 255, 227), 0 0 42px #0fa, 0 0 82px #0fa, 0 0 92px #0fa, 0 0 102px rgb(16, 255, 203), 0 0 151px rgb(26, 255, 179);
 }
 
-.logodiv{
-        height:200px;
+.logodiv {
+    height: 200px;
 }
 
-p{
+p {
     border: 2px dotted yellow;
-    background-color:rgba(227, 248, 107, 0.658);
-    text-align:center;
+    background-color: rgba(227, 248, 107, 0.658);
+    text-align: center;
 }
 
+.wrapper {
+    background: yellow;
+}
 
-.wrapper>.box{
+.wrapper>.box {
     width: 25vw;
     height: 35vh;
     margin: 20px;
-    position:relative;
+    position: relative;
+}
 
-    }
-
-.box.logo{
-    position:sticky;
-    left:1100px;
-    top:100px;
-    border:4mm ridge rgb(255, 218, 53);
+.box.logo {
+    position: sticky;
+    left: 1100px;
+    top: 100px;
+    border: 4mm ridge rgb(255, 218, 53);
     width: 23vw;
     height: 35vh;
     margin: 20px;
-     
 }
- .box.logo> img{
-     width:23vw;
-     height: 35vh;
- }
 
- .box.logo>p {
-     color: rgb(0, 0, 0);
-     font-weight: bolder;
-     font-style: italic;
-     position: absolute;
-     top:180px;
-     left: 10px;     
-     
- }
+.box.logo>img {
+    width: 23vw;
+    height: 35vh;
+}
 
-.box.one{
-    position:absolute;
+.box.logo>p {
+    color: rgb(0, 0, 0);
+    font-weight: bolder;
+    font-style: italic;
+    position: absolute;
+    top: 180px;
+    left: 10px;
+}
+
+.box.one {
+    position: absolute;
     left: 700px;
     width: 20vw;
     height: 40vh;
 }
 
-.box.one> img{
+.box.one>img {
     width: 20vw;
     height: 40vh;
     border: thick double #361c03;
-
 }
 
- .box.one>p{
-     position:absolute;
-     top: -40px;
-     left: 5px;
-    
+.box.one>p {
+    position: absolute;
+    top: -40px;
+    left: 5px;
+}
 
- }
-.box.two{
-    margin-top:10px;
-    position:absolute;
+.box.two {
+    margin-top: 10px;
+    position: absolute;
     left: 400px;
     width: 30vw;
     height: 40vh;
     top: 100px;
-    
 }
 
-.box.two> img{
+.box.two>img {
     width: 30vw;
     height: 40vh;
     border: thick double #361c03;
-
 }
-.box.two>p{
-    position:absolute;
-    right:-30px;
+
+.box.two>p {
+    position: absolute;
+    right: -30px;
     left: 40px;
     bottom: -20px;
-
 }
 
-.box.three{
+.box.three {
     left: 100px;
-    position:relative;
+    position: relative;
 }
 
-.box.three> img{
+.box.three>img {
     width: 25vw;
     height: 35vh;
     border: thick double #361c03;
-    
 }
 
 .box.three>p {
-    position:absolute;
-    bottom:-10px;
+    position: absolute;
+    bottom: -10px;
     left: 10px;
-
 }
 
-.box.four{
-   position:absolute;
-   left:300px;
-   top: 900px;
+.box.four {
+    position: absolute;
+    left: 300px;
+    top: 900px;
 }
 
-.box.four>img{
+.box.four>img {
     width: 30vw;
     height: 40vh;
     border: thick double #361c03;
-    
-
 }
 
 .box.four>p {
-    position:absolute;
+    position: absolute;
     right: 2px;
     bottom: -50px;
-
 }
 
-.box.five{
-
-    position:relative;
-    top:500px;
+.box.five {
+    position: relative;
+    top: 500px;
     left: 90px;
-   
-
 }
 
-.box.five>img{
+.box.five>img {
     width: 30vw;
     height: 40vh;
     border: thick double #361c03;
 }
 
-.box.five>p{
-    position:absolute;
+.box.five>p {
+    position: absolute;
     left: 500px;
     top: 20px;
-    width:10vw;
-
+    width: 10vw;
 }
 
-.box.six{
-    position:absolute;
+.box.six {
+    position: absolute;
     left: 800px;
-    top:1300px;
+    top: 1300px;
     margin-bottom: 500px;
-    
 }
 
-.box.six>img{
+.box.six>img {
     width: 30vw;
     height: 50vh;
     border: thick double #361c03;
 }
 
-.box.six>p{
-    position:absolute;
-    right:400px;
-    bottom:-10px;
-    width:10vw;   
-    }
+.box.six>p {
+    position: absolute;
+    right: 400px;
+    bottom: -10px;
+    width: 10vw;
+}
