--- a/01-HTML-CSS/09-animations/Andrew, Ohad, Yahia/style.scss
+++ b/01-HTML-CSS/09-animations/Andrew, Ohad, Yahia/style.scss
@@ -114,94 +114,32 @@
     margin: 15px;
     &-banner {
         display: flex;
-        height: 60px;
+        height: 50px;
         width: 600px;
-        overflow: scroll;
+        //overflow: hidden;
         white-space: nowrap;
-        &::-webkit-scrollbar{
-            width: 0px;
-        }
+
         &__item {
-            position: relative;
             display: flex;
             align-items: center;
             gap: 5px;
             padding-inline: 10px;
             border-radius: 5px;
-            background-color: var(--color-light-grey);
+            background-image: var(--color-light-grey);
             margin: 5px;
             width: 90ch;
             svg {
                 width: 20px;
-            }
-            &::before{
-                content: '';
-                left: 0px;
-                width: 100%;
-                height: 100%;
-                position: absolute;
-                filter: opacity(0.1);
-                border-radius: 5px;
-            }
-            &#rose {
-                fill: var(--color-rose);
-                &::before{
-                    background-color: var(--color-rose);
-                }
-            }
-            &#avax {
-                fill: var(--color-avax);
-                &::before{
-                    background-color: var(--color-avax);
-                }
-            }
-            &#link {
-                fill: var(--color-link);
-                &::before{
-                    background-color: var(--color-link);
-                }
-            }
-            &#busd {
-                fill: var(--color-busd);
-                &::before{
-                    background-color: var(--color-busd);
-                }
-            }
-            &#doge {
-                fill: var(--color-doge);
-                &::before{
-                    background-color: var(--color-doge);
-                }
-            }
-            &#btc {
-                fill: var(--color-btc);
-                &::before{
-                    background-color: var(--color-doge);
-                }
-            }
-            &#uni {
-                fill: var(--color-uni);
-                &::before{
-                    background-color: var(--color-uni);
-                }
-            }
-            &#klay {
-                fill: var(--color-klay);
-                &::before{
-                    background-color: var(--color-klay);
-                }
-            }
-            &#axs {
-                fill: var(--color-axs);
-                &::before{
-                    background-color: var(--color-axs);
-                }
-            }
-            &#xlm {
-                fill: var(--color-xlm);
-                &::before{
-                    background-color: var(--color-xlm);
-                }
+                #rose {fill: var(--color-rose);}
+                #avax {fill: var(--color-avax);}
+                #link {fill: var(--color-link);}
+                #busd{fill: var(--color-busd);}
+                #doge{fill: var(--color-doge);}
+                #btc{fill: var(--color-btc);}
+                #uni{fill: var(--color-uni);}
+                #klay{fill: var(--color-klay);}
+                #axs{fill: var(--color-axs);}
+                #xlm{fill: var(--color-xlm);}
             }
         }
     }
