--- a/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/Roi/style.scss
+++ b/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/Roi/style.scss
@@ -1,87 +1,65 @@
-body {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: black;
+.container {
+  width: 400px;
+  height: 200px;
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  overflow: hidden;
+  text-align: center;
+  transform: translate(-50%, -50%);
 }
 
-.Container {
-    display:grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 0.1fr auto 0.1fr;
-    grid-template-areas: 
-    "Header Header Header"
-    "Wil Roi Yael"
-    "Navbar Navbar Navbar"
-    ;
+.gauge-a {
+  z-index: 1;
+  position: absolute;
+  background-color: rgba(255,255,255,.2);
+  width: 400px;
+  height: 200px;
+  top: 0%;
+  border-radius: 250px 250px 0px 0px;
+}
 
-    &__Header {
-        
-        grid-area: Header;
-        display:grid;
-        grid-template-columns: 0.1fr auto 0.1fr;
-        align-items: center;
-        border: 1px solid red;
-        
-        &__Avatar {
-                display: grid;
-                padding: 10px;
-                justify-content: center;
-                
-                img {
-                width: 30px;
-                height: 30px;
-                }
-        }
+.gauge-b {
+  z-index: 3;
+  position: absolute;
+  background-color: #222;
+  width: 250px;
+  height: 125px;
+  top: 75px;
+  margin-left: 75px;
+  margin-right: auto;
+  border-radius: 250px 250px 0px 0px;
+}
 
-        &__Welcome {
-            display:grid;
-            color:white;
-            padding: 10px;
-        }
-    
-        &__MenuBtn {
-            display:grid;
-            padding: px;
-            justify-content: center;
-                
-            img {
-                width: 30px;
-                height: 30px;
-                }
-        }
+.gauge-c {
+  z-index: 2;
+  position: absolute;
+  background-color: #5664F9;
+  width: 400px;
+  height: 200px;
+  top: 200px;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 0px 0px 200px 200px;
+  transform-origin: center top;
+  transition: all 1.3s ease-in-out;
+}
 
-    }
+.container:hover .gauge-c {  transform:rotate(.5turn);
+}
 
-    &__Main {
-        height: 80vh;
-        border: 1px solid red;
-        
-        &__Wil {
-            border: 1px solid red;
-        }
-        &__Roi {
-            border: 1px solid red;
-        }
-        &__Yael {
-            border: 1px solid red;
-        }
-    }
+.container:hover .gauge-data { color: rgba(255,255,255,1); }
 
-    &__Navbar {
-        grid-area:Navbar;
-        display:flex;
-        flex-direction:row;
-
-        &--Btn {
-            display:flex;
-            width: 100%;
-            justify-content: center;
-            align-items: center;
-            border: 1px solid red;
-
-            img {
-                width: 25px;
-                height: 25px;
-            }
-        }
-    }
+.gauge-data {
+  z-index: 4;
+  color: rgba(255,255,255,.2);
+  font-size: 1.5em;
+  line-height: 25px;
+  position: absolute;
+  width: 400px;
+  height: 200px;
+  top: 90px;
+  margin-left: auto;
+  margin-right: auto;
+  transition: all 1s ease-out;
 }
