--- a/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/style.scss
+++ b/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/style.scss
@@ -58,6 +58,7 @@ body {
   &__Roi {
     border:1px solid red;
     grid-area: Roi;
+
   }
   &__Yael {
     border:1px solid red;
@@ -106,7 +107,7 @@ body {
 @media only screen and (min-width:1200px){ 
   .Container {
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 0.1fr auto;
+    grid-template-rows: 0.1fr 0.9fr;
     grid-template-areas:
     "header"
     "Wil Roi Yael";
