--- a/01-HTML-CSS/09-animations/group - Or Noa Etan/nav.scss
+++ b/01-HTML-CSS/09-animations/group - Or Noa Etan/nav.scss
@@ -148,18 +148,23 @@ nav ul {
     &__mytasks {
       display: none;
       
+      
     }
   }
+  
 }
-span{
-  opacity: 0;
-  transition: all 0.4s ease;
-  transform: translateY(50px);
-  display: inline-block;
-}
-.fade{
-  opacity: 1;
-  transform: translateY(0px);
+
+h3{
+  span{
+    opacity: 0;
+    transition: all 0.4s ease;
+    transform: translateY(50px);
+    display: inline-block;
+  }
+  .fade{
+    opacity: 1;
+    transform: translateY(0px);
+  }
 }
 
 // KEYFRAMES
