--- a/01-HTML-CSS/09-animations/Andrew/final project/style.scss
+++ b/01-HTML-CSS/09-animations/Andrew/final project/style.scss
@@ -26,23 +26,54 @@
     color: var(--color-white);
     font-family: Arial, Helvetica, sans-serif;
 }
-
+body{
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 .header {
     display: flex;
     justify-content: space-between;
-
+    width: 95%;
     &__icon {
+        position: relative;
         border: 1px solid var(--color-light-grey);
-        border-radius: 5px;
-        width: 30px;
-        height: 30px;
+        border-radius: 10px;
+        width: 50px;
+        height: 50px;
         background-color: var(--color-dark-grey);
+        svg{
+            width: 30px;
+            height: 30px;
+            fill: var(--color-orange);
+        }
+        &#bell{
+            &::after{
+                content: '6';
+                filter: drop-shadow(0px 0px 15px  #c05711);
+                font-size: 1rem;
+                font-weight: 600;
+                position: absolute;
+                top: -9px;
+                right: -9px;
+                width: 20px;
+                height: 20px;
+                line-height: 20px;
+                background-color: #c05711;
+                border-radius: 5px;
+                color: var(--color-white);
+            }
+        }
     }
 
     &__item {
         color: var(--color-white);
-        
+        border: 0px;
+        margin-inline: -130px;
         border-radius: 5px;
+        font-size: 1.3rem;
         background-color: var(--color-dark-grey);
     }
 }
@@ -53,8 +84,8 @@
     position: fixed;
     bottom: 20px;
     height: 120px;
+    width: 90vw;
     background-color: var(--color-light-grey);
-    
     border-radius: 20px;
     margin: 4vw;
     &-container{
@@ -120,8 +151,7 @@
 }
 
 .wallet {
-    width: 640px;
-    border: 1px solid red ;
+    width: 600px;
     margin: 15px;
     &-banner {
         display: flex;
@@ -138,7 +168,7 @@
             align-items: center;
             gap: 5px;
             padding-inline: 10px;
-            border-radius: 5px;
+            border-radius: 10px;
             background-color: var(--color-light-grey);
             margin: 5px;
             width: 90ch;
@@ -152,7 +182,7 @@
                 height: 100%;
                 position: absolute;
                 filter: opacity(0.1);
-                border-radius: 5px;
+                border-radius: 10px;
             }
             &#rose {
                 fill: var(--color-rose);
@@ -249,15 +279,17 @@
         }
 
         &__graph {
-
+            position: relative;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            border: 3px solid var(--color-red);
-            border-radius: 50%;
             height: 600px;
-
+            svg{
+                position: absolute;
+                width: 550px;
+                height: 550px;
+            }
             h1 {
                 font-size: 3rem;
                 position: relative;
@@ -287,12 +319,11 @@
     }
 
     &-portfolio {
+        margin-bottom: 200px;
         &__title {
-            
             display: flex;
             justify-content: space-between;
             align-items: center;
-
             h2 {
                 font-weight: 100;
             }
@@ -305,16 +336,14 @@
         }
 
         &__list{
-            display: flex;
-            flex-direction: column;
-            
+            position: relative;
             &__item{
                 display: flex;
                 justify-content: space-between;
+                padding-block: 10px;
+                box-shadow: 0px -2px 0px 0px var(--color-light-grey);
                 &__icon{
                     background-color: var(--color-mid-grey);
-                    position: relative;
-                    box-shadow: 0px -2px 0px var(--color-light-grey);
                     border-radius: 25%;
                     width: 75px;
                     height: 75px;
@@ -327,20 +356,25 @@
                 }
 
                 &__name{
+                    position: absolute;
+                    left: 85px;
                     margin: 1rem;
                     font-size: 1.5rem;
                     line-height: 0rem;
-                    text-align: start;
                     :last-child{
                         font-size: 0.7em;
+                        color: var(--color-lighter-grey);
                     }
                 }
 
                 &__graph{
-                    width: 250px;
-                    border: 1px solid var(--color-light-grey);
+                    position: absolute;
+                    left: 250px;
+                    width: 230px;
+                    //border: 1px solid var(--color-light-grey);
+                    overflow: hidden;
                     img{
-                        width: 190px;
+                        width: 220px;
                     }
                 }
 
@@ -355,7 +389,7 @@
                     .--red{
                         color: var(--color-red);
                     }
-                    .green{
+                    .--green{
                         color: var(--color-light-green);
                     }
                 }
