--- a/01-HTML-CSS/09-animations/group - Or Noa Etan/style.scss
+++ b/01-HTML-CSS/09-animations/group - Or Noa Etan/style.scss
@@ -11,6 +11,35 @@ body {
   margin: auto;
   background-color: #f0f0f2;
 
+  &__dailytasksdone{
+    display: grid;
+    grid-template-columns: repeat(5, 80px);
+    grid-template-rows:  100px, 200px, 100px;
+    gap: 5px;
+
+    .box1 {
+      grid-column: 1/4;
+      font-weight: 700;
+      font-family: "Poppins", sans-serif;
+      font-size: 1.5rem;
+      text-transform: capitalize;
+    }
+    .box2{
+      grid-column: 4/6;
+      font-weight: 550;
+    }
+    .box3{
+      grid-column: 1/6;
+     
+    }
+    .box{
+      border: 2px solid black;
+      border-radius:20px ;
+      padding: 20px;
+      text-align: center;
+    }
+  }
+
   &-home {
     height: 100vh;
     background: white;
