--- a/01-HTML-CSS/09-animations/group - Or Noa Etan/style.scss
+++ b/01-HTML-CSS/09-animations/group - Or Noa Etan/style.scss
@@ -141,7 +141,6 @@ body {
 
       .box {
         box-sizing: content-box;
-
         font-family: "Poppins", sans-serif;
         text-transform: capitalize;
         background: white;
@@ -153,14 +152,15 @@ body {
         height: auto;
         align-items: center;
         justify-content: center;
-
+        
         &__flex {
-          justify-content: center;
+          align-content: space-around;
           display: flex;
           flex-direction: column;
           margin: 0;
           padding: 0;
           line-height: 0.1ch;
+          
         }
         &__header {
           display: flex;
@@ -226,6 +226,7 @@ body {
             margin-top: 0.5ch;
           }
         }
+        
       }
     }
     // ------ adding description box
@@ -412,16 +413,7 @@ main {
   background-color: #f0f0f2;
 }
 
-span{
-  opacity: 0;
-  transition: all 0.4s ease;
-  transform: translateY(50px);
-  display: inline-block;
-}
-.fade{
-  opacity: 1;
-  transform: translateY(0px);
-}
+
 //icon styles, use as
 .md-18 {
   font-size: 18px;
