--- a/01-HTML-CSS/09-animations/Andrew/final project/style.scss
+++ b/01-HTML-CSS/09-animations/Andrew/final project/style.scss
@@ -34,10 +34,12 @@ body{
     align-items: center;
 }
 .header {
+    
     display: flex;
     justify-content: space-between;
     width: 95%;
     &__icon {
+        perspective: 100px;
         position: relative;
         border: 1px solid var(--color-light-grey);
         border-radius: 10px;
@@ -66,16 +68,54 @@ body{
                 color: var(--color-white);
             }
         }
+        &__notification{
+            transform-origin: bottom;
+            position: absolute;
+            left: 2px;
+            top: 2px;
+            border-radius: 10px;
+            box-shadow: 
+            0px 0px 0px 1px red,
+            0px -2px 0px 0px blue,
+            ;
+            background-color: rgba(255, 248, 220, 0.158);
+            width: 45px;
+            height: 45px;
+            #note1{
+
+            }
+            &:hover{
+                animation: flop1 6s forwards linear;
+            }
+            
+        }
     }
 
     &__item {
         color: var(--color-white);
         border: 0px;
         margin-inline: -130px;
+        padding-inline: 2ch;
         border-radius: 5px;
         font-size: 1.3rem;
         background-color: var(--color-dark-grey);
+        &:hover{
+            background-color: var(--color-light-grey);
+            box-shadow: 0px 0px 0px 1px var(--color-white);
+        }
     }
+}
+
+@keyframes flop1{
+    17%{transform-origin: bottom; transform: rotateX(180deg);}
+    100%{transform-origin: bottom; transform: rotateX(180deg);}
+    //50%{transform: rotateX(-180deg);}
+    //67%{transform: rotateX(360deg);}
+    //83%{transform: rotateX(180deg);}
+    //100%{transform: rotateX(360deg);}
+}
+@keyframes flop2{
+    
 }
 
 .footer{
@@ -150,9 +190,11 @@ body{
     }
 }
 
+
+
 @keyframes scroll-right{
     from{transform: translateX(640px);}
-    to{transform: translateX(-1300px);}
+    to{transform: translateX(-1250px);}
 }
 
 .wallet {
@@ -182,7 +224,7 @@ body{
             background-color: var(--color-light-grey);
             margin: 5px;
             width: 90ch;
-            animation: scroll-right 10s cubic-bezier(0,.2,1,.8) infinite;
+            animation: scroll-right 15s cubic-bezier(0,.4,1,.6) infinite;
             svg {
                 width: 20px;
             }
