--- a/01-HTML-CSS/09-animations/Andrew/final project/style.scss
+++ b/01-HTML-CSS/09-animations/Andrew/final project/style.scss
@@ -39,7 +39,9 @@ body{
     justify-content: space-between;
     width: 95%;
     &__icon {
-        perspective: 100px;
+        z-index: 999;
+        perspective: 300px;
+        perspective-origin: 300%;
         position: relative;
         border: 1px solid var(--color-light-grey);
         border-radius: 10px;
@@ -52,6 +54,8 @@ body{
             fill: var(--color-orange);
         }
         &#bell{
+            z-index: 7;
+            box-shadow: 5px 5px 8px;
             &::after{
                 content: '6';
                 filter: drop-shadow(0px 0px 15px  #c05711);
@@ -70,64 +74,73 @@ body{
         }
         &:hover{
             #note1{
-                animation: flop 1s forwards linear;
+                animation: flop 1s forwards ease-in;
             }
             #note2{
-                animation: flop 1s 1s forwards linear;
+                animation: flop 1s 1s forwards ease-in;
             }
             #note3{
-                animation: flop 1s 2s forwards linear;
+                animation: flop 1s 2s forwards ease-in;
             }
             #note4{
-                animation: flop 1s 3s forwards linear;
+                animation: flop 1s 3s forwards ease-in;
             }
             #note5{
-                animation: flop 1s 4s forwards linear;
+                animation: flop 1s 4s forwards ease-in;
             }
             #note6{
-                animation: flop 1s 5s forwards linear;
+                animation: flop 1s 5s forwards ease-in;
             }
-            #hide{
+            #shadow{
+                animation: flop-shadow 6s forwards linear;
+            }    
+        }
+        #shadow{
+            z-index: -1;
+            position: absolute;
+            width: 50px;
+            background-color: black;
+            border-radius: 10px;
+            top: 55px;
+            left: 5px;
+            filter: blur(8px);
 
-            }
-            
+
         }
         &__notification{
             transform-origin: bottom;
             position: absolute;
-            left: 2px;
+            left: 0px;
             border-radius: 10px;
-            box-shadow: 
-            0px 0px 0px 1px red,
-            0px -2px 0px 0px blue,
-            ;
-            background-color: rgba(255, 248, 220, 0.158);
-            width: 45px;
-            height: 45px;
+            box-shadow: 0px 0px 0px 1px var(--color-light-grey);
+            background-color: var(--color-dark-grey);
+            //transform-style: preserve-3d;
+            width: 50px;
+            height: 50px;
+            visibility: hidden;
             &#note1{
-                top: 2px;
+                top: 0px;
+                filter: brightness(1.05);
             }
             &#note2{
-                top: 47px;
+                top: 52px;
+                filter: brightness(1.1);
             }
             &#note3{
-                top: 92px;
+                top: 102px;
+                filter: brightness(1.15);
             }
             &#note4{
-                top: 137px;
+                top: 152px;
+                filter: brightness(1.2);
             }
             &#note5{
-                top: 182px;
+                top: 202px;
+                filter: brightness(1.25);
             }
             &#note6{
-                top: 227px;
-            }
-            &#hide{
-                position: absolute;
-                height: 270px;
-                width: 45px;
-                box-shadow: 0px 0px 0px 1px purple;
-                z-index: 9989;
+                top: 252px;
+                filter: brightness(1.3);
             }
         }
     }
@@ -146,14 +159,23 @@ body{
         }
     }
 }
-
+@keyframes flop-shadow{
+    0%{height: 0px;} 10%{height: 50px;}
+    17%{height: 52px;} 26%{height: 100px;}
+    33%{height: 102px;} 43%{height: 150px;}
+    50%{height: 152px;} 60%{height: 200px;}
+    67%{height: 202px;} 77%{height: 250px;}
+    83%{height: 252px;} 93%{height: 300px;}
+    100%{height: 302px;} 
+}
 @keyframes flop{
-    70%{transform-origin: bottom; transform: rotateX(190deg);}
-    80%{transform-origin: bottom; transform: rotateX(170deg);}
-    100%{transform-origin: bottom; transform: rotateX(180deg);}
-    
+    0%{visibility: visible;}
+    70%{visibility: visible; transform-origin: bottom; transform: rotateX(-190deg);}
+    80%{visibility: visible; transform-origin: bottom; transform: rotateX(-170deg);}
+    100%{visibility: visible; transform-origin: bottom; transform: rotateX(-180deg);} 
 }
 .footer{
+    
     display: flex;
     justify-content: center;
     position: fixed;
@@ -236,20 +258,19 @@ body{
     width: 600px;
     margin: 15px;
     &-banner {
+        
         display: flex;
         height: 45px;
         width: 600px;
         overflow: hidden;
         white-space: nowrap;
-        &::-webkit-scrollbar{
-            width: 0px;
-        }
         &:hover{
             > .wallet-banner__item{
                 animation-play-state: paused;
             }
         }
         &__item {
+            z-index: -1;
             position: relative;
             display: flex;
             align-items: center;
@@ -351,6 +372,7 @@ body{
         }
 
         &__max {
+            z-index: -1;
             position: absolute;
             top: 0px;
             right: 0px;
