--- a/01-HTML-CSS/08-Responsive/michaeldub/mishatemp/style3.scss
+++ b/01-HTML-CSS/08-Responsive/michaeldub/mishatemp/style3.scss
@@ -32,7 +32,7 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 99%;
+    height: 95%;
     padding: 0.5em;
     // align-items: center;
 }
@@ -288,14 +288,19 @@ body{
 .image {
 
    @include flexCenter(center,row);
+   align-items: flex-end;
+    height: 30vh;
+
 
    img{
        width: auto;
+       height: 100%;
    }
    
 }
 
 @media only screen and (min-width: 900px){
+
 
     body{
         align-items: center;
@@ -339,3 +344,4 @@ body{
         }
     }
 }
+
