--- a/01-HTML-CSS/08-Responsive/michaeldub/mishatemp/style3.scss
+++ b/01-HTML-CSS/08-Responsive/michaeldub/mishatemp/style3.scss
@@ -45,6 +45,7 @@ html {
 }
 
 body {
+
     background-color: $bgcolor;
     display: flex;
     flex-direction: column;
@@ -52,13 +53,40 @@ body {
 
 }
 
+.cloud{
+
+    position: absolute;
+    left:-90px;
+    img{
+        height: 100%;
+        width: 100%;
+    }
+    height: 150px;
+    width: auto;
+}
+
+.cloud2{
+
+    position: absolute;
+    left:-90px;
+    top:55px;
+    img{
+        height: 100%;
+        width: 100%;
+    }
+    height: 150px;
+    width: auto;
+}
+
 .bigwrapper {
 
+    position: relative;
+    overflow-x: hidden;
     margin-top: 1em;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 900px;
+    height: 92vh;
     border-radius: 20px;
     padding: 0.7em;
     font-family: $mainFontFamily;
@@ -316,6 +344,7 @@ body {
     @include flexCenter(center, row);
     align-items: flex-end;
     height: 280px;
+    margin-bottom: -12px;
 
 
     img {
@@ -371,5 +400,10 @@ body {
             }
 
         }
+    }
+}
+@media only screen and (max-height: 990px){
+    .bigwrapper{
+        height: 900px;
     }
 }
