--- a/01-HTML-CSS/09-animations/group - Or Noa Etan/style.scss
+++ b/01-HTML-CSS/09-animations/group - Or Noa Etan/style.scss
@@ -4,6 +4,7 @@ body {
   height: auto;
   width: 100vw;
 }
+
 #landing {
   padding-top: 1.5rem;
   width: 100vw;
@@ -11,13 +12,67 @@ body {
   margin: auto;
   background-color: #f0f0f2;
 
-  &__dailytasksdone{
-  padding-top: 7vh;
+  &__dailytaskslist {
+    padding-top: 1.5rem;
+    display: flex;
+    flex-direction: column;
+
+    .list {
+      display: flex;
+      justify-content: space-around;
+      border-bottom: 0.5px solid rgba(96, 94, 94, 0.68);
+
+      &__line {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        .box-logo {
+          width: 40px;
+          height: 40px;
+          border-radius: 50%;
+
+
+          &:nth-child(odd) {
+            background-color: rgb(245, 196, 106);
+          }
+
+          &:nth-child(even) {
+            background-color: rgb(167, 219, 236);
+          }
+
+          i {
+            margin-left: 12px;
+            margin-top: 12px;
+
+          }
+
+          h {
+            margin-top: 12px;
+            margin-left: 12px;
+          }
+        }
+
+        .logo {
+          font-weight: 700;
+        }
+
+        p {
+          padding: 1.5rem;
+        }
+
+
+      }
+    }
+  }
+
+  &__dailytasksdone {
+    padding-top: 6vh;
     margin: auto;
     display: grid;
     grid-template-columns: repeat(5, 80px);
-    grid-template-rows:  100px, 200px, 100px;
-    gap: 5px;
+    grid-template-rows: 100px, 200px, 100px;
+    gap: 10px;
 
     .box1 {
       grid-column: 1/4;
@@ -26,23 +81,40 @@ body {
       font-size: 1.5rem;
       text-transform: capitalize;
     }
-    .box2{
+
+    .box2 {
       grid-column: 4/6;
       font-weight: 550;
       text-align: right;
     }
-    .box3{
+
+    .box3 {
       grid-column: 1/6;
-     
-      img{
+
+      img {
         width: 100%;
       }
     }
-    .box{
+
+    .box {
       border: 2px solid black;
-      border-radius:20px ;
+      border-radius: 15px;
       padding: 20px;
       text-align: center;
+
+      &:hover {
+        background-color: rgba(0, 0, 0, 0.837);
+        cursor: pointer;
+      }
+
+      p {
+        margin: 0;
+        font-weight: 500;
+
+        &:hover {
+          color: white;
+        }
+      }
     }
   }
 
@@ -125,10 +197,12 @@ body {
       justify-content: space-between;
     }
   }
+
   //------------Etan
   //----- already created description boxes
   &__task {
     overflow-y: hidden;
+
     &-count {
       display: flex;
       flex-direction: row;
@@ -137,6 +211,7 @@ body {
       height: fit-content;
       overflow-y: scroll;
       list-style: none;
+
       &:nth-child(1) {
         margin-left: 1.5rem;
       }
@@ -159,7 +234,7 @@ body {
         height: auto;
         align-items: center;
         justify-content: center;
-        
+
         &__flex {
           align-content: space-around;
           display: flex;
@@ -167,12 +242,14 @@ body {
           margin: 0;
           padding: 0;
           line-height: 0.1ch;
-          
+
         }
+
         &__header {
           display: flex;
           flex-direction: row;
         }
+
         &__title {
           display: flex;
           flex-direction: column;
@@ -185,6 +262,7 @@ body {
             font-weight: 600;
             font-size: 1rem;
           }
+
           &-urg {
             opacity: 50%;
             margin-bottom: 0;
@@ -198,6 +276,7 @@ body {
           font-weight: 700;
           font-size: 1.5rem;
           margin: 0;
+
           &-square {
             width: 3ch;
             height: 3ch;
@@ -210,32 +289,38 @@ body {
             align-self: center;
           }
         }
+
         .blue {
           background-color: #a7ebf2;
         }
+
         .orange {
           background-color: #f2b694;
         }
+
         &__expln {
           display: flex;
           flex-direction: column;
           align-items: flex-start;
           line-height: 1.5rem;
+
           h4 {
             margin-top: 1.5rem;
             margin-bottom: 0;
             font-weight: 600 bold;
             font-size: 1.1rem;
           }
+
           &-transp {
             opacity: 30%;
             margin-bottom: 0;
             margin-top: 0.5ch;
           }
         }
-        
+
       }
     }
+
     // ------ adding description box
 
     &__descr {
@@ -250,6 +335,7 @@ body {
       padding: 1.5rem;
       margin: 2rem;
       background-color: #f0f0f2;
+
       &:hover {
         cursor: pointer;
       }
@@ -259,20 +345,21 @@ body {
       }
 
       &__text {
-        
+
         text-shadow: 0.1rem 0.18rem rgba(0, 0, 0, 0.2);
         padding-inline: 0;
         display: flex;
         flex-direction: column;
         align-content: center;
 
-        & > h3,
+        &>h3,
         p {
           margin: 0.1rem;
           padding: 0;
         }
       }
     }
+
     //--------- Calendar
     &__cal {
       padding: 0;
@@ -298,6 +385,7 @@ body {
         padding: 2vw 0rem 5vw 0rem;
         box-shadow: 0.5 rem 3rem rgba($color: #000000, $alpha: 0.4);
       }
+
       &__title {
         height: 6rem;
         width: 100vw;
@@ -307,12 +395,14 @@ body {
         align-items: center;
         text-align: center;
         text-shadow: 0.15rem 0.25rem rgba(0, 0, 0, 0.2);
+
         i {
           font-size: 1.25rem;
           cursor: pointer;
           margin-left: auto;
           margin-right: 1.5rem;
         }
+
         h1 {
           font-size: 1.5rem;
           font-weight: 400;
@@ -320,11 +410,12 @@ body {
           letter-spacing: 0.1rem;
           padding: 0;
         }
+
         svg {
           margin: 1.5rem;
         }
       }
-      
+
       &__weekdays {
         width: 100vw;
         height: 2.5rem;
@@ -342,6 +433,7 @@ body {
           margin: auto;
         }
       }
+
       &__days {
         width: 100%;
         height: 100%;
@@ -358,8 +450,10 @@ body {
         transition: background-color 0.2s;
 
         @media only screen and (min-width: 600px) {
-          padding: 0 2vw;;
+          padding: 0 2vw;
+          ;
         }
+
         div {
           height: fit-content;
           line-height: 3vh;
@@ -375,6 +469,7 @@ body {
               font-weight: bolder;
             }
           }
+
           & p {
             margin: 0;
           }
@@ -384,17 +479,20 @@ body {
         .next-date {
           opacity: 0.5;
         }
+
         .assigned {
           display: flex;
           flex-direction: column;
-          
+
           column-gap: 0;
           text-align: center;
           justify-content: space-around;
+
           p {
             line-height: 1.5vh;
           }
         }
+
         .today {
           font-weight: bolder;
           color: white;
@@ -408,6 +506,7 @@ body {
     }
   }
 }
+
 .iconify {
   padding: 0;
 }
