--- a/01-HTML-CSS/09-animations/Andrew/final project/style.scss
+++ b/01-HTML-CSS/09-animations/Andrew/final project/style.scss
@@ -57,7 +57,13 @@ body {
             height: 30px;
             fill: var(--color-orange);
         }
-
+        &:hover{
+            .header__icon__scanner{
+                visibility: visible;
+                transform: scale(1);
+            }
+            
+        }
         &__scanner {
             visibility: hidden;
             perspective: 400px;
@@ -67,17 +73,24 @@ body {
             left: 0px;
             width: 300px;
             height: 300px;
-            background-color: black;
+            background-color: #2E3137B0;
+            border-radius: 10px;
+            border: 1px solid var(--color-white);
+            overflow: hidden;
+            backdrop-filter: blur(3px);
+            transform-origin: top left;
+            transform: scale(calc(1/6));
+            transition: ease 0.3s;
             &__scene {
                 animation: rotate 20s infinite linear;  
                 &__line {
                     z-index: 200;
                     width: 2px;
-                    height: 240px;
+                    height: 200px;
                     background-color: white;
                     box-shadow: 0px 0px 10px 5px red;
                     position: absolute;
-                    top: 0px;
+                    top: 15px;
                     left: 150px;
                     animation: scan 2s infinite ease-in-out alternate;
                 }
@@ -85,9 +98,8 @@ body {
                 svg {
                     margin: 25px;
                     fill: var(--color-white);
-                    width: 200px;
-                    height: 200px;
-                    //animation: rotate 5s infinite linear;  
+                    width: 180px;
+                    height: 180px;
                 }
             }
         }
@@ -280,11 +292,11 @@ body {
 
 @keyframes scan {
     0% {
-        transform: translateX(-130px);
+        transform: translateX(-110px);
     }
 
     100% {
-        transform: translateX(130px);
+        transform: translateX(110px);
     }
 }
 
