--- a/01-HTML-CSS/09-animations/Andrew/final project/style.scss
+++ b/01-HTML-CSS/09-animations/Andrew/final project/style.scss
@@ -653,180 +653,80 @@ body {
             &__cell {
                 box-shadow: 0px 0px 0px 1px red;
             }
-             #cell1{
-                 &hover{
-                     .wallet-value__scene{
-                         
-                     }
-                 }
+             #cell1:hover .wallet-value__scene{
+                 
              }
-             #cell2{
-                 &hover{
-                     .wallet-value__scene{
-                         
-                     }
-                 }
+             #cell2:hover .wallet-value__scene{
+                 
              }
-             #cell3{
-                 &hover{
-                     .wallet-value__scene{
-                         
-                     }
-                 }
+             #cell3:hover .wallet-value__scene{
+                 
              }
-             #cell4{
-                 &hover{
-                     .wallet-value__scene{
-                         
-                     }
-                 }
+             #cell4:hover .wallet-value__scene{
+                 
              }
-             #cell5{
-                 &hover{
-                     .wallet-value__scene{
-                         
-                     }
-                 }
+             #cell5:hover .wallet-value__scene{
+                 
              }
-             #cell6{
-                 &hover{
-                     .wallet-value__scene{
-                         
-                     }
-                 }
+             #cell6:hover .wallet-value__scene{
+                 
              }
-             #cell7{
-                 &hover{
-                     .wallet-value__scene{
-                         
-                     }
-                 }
+             #cell7:hover .wallet-value__scene{
+                 
              }
-             #cell8{
-                 &hover{
-                     .wallet-value__scene{
-                         
-                     }
-                 }
+             #cell8:hover .wallet-value__scene{
+                 
              }
-             #cell9{
-                 &hover{
-                     .wallet-value__scene{
-                         
-                     }
-                 }
+             #cell9:hover .wallet-value__scene{
+                 
              }
-            #cell10{
-                &hover{
-                    .wallet-value__scene{
-                        
-                    }
-                }
+            #cell10:hover .wallet-value__scene{
+                
             }
-            #cell11{
-                &hover{
-                    .wallet-value__scene{
-                        
-                    }
-                }
+            #cell11:hover .wallet-value__scene{
+                
             }
-            #cell12{
-                &hover{
-                    .wallet-value__scene{
-                        
-                    }
-                }
+            #cell12:hover .wallet-value__scene{
+                
             }
-            #cell13{
-                &hover{
-                    .wallet-value__scene{
-                        
-                    }
-                }
+            #cell13:hover .wallet-value__scene{
+                
             }
-            #cell14{
-                &hover{
-                    .wallet-value__scene{
-                        
-                    }
-                }
+            #cell14:hover .wallet-value__scene{
+                
             }
-            #cell15{
-                &hover{
-                    .wallet-value__scene{
-                        
-                    }
-                }
+            #cell15:hover .wallet-value__scene{
+                
             }
-            #cell16{
-                &hover{
-                    .wallet-value__scene{
-                        
-                    }
-                }
+            #cell16:hover .wallet-value__scene{
+                
             }
-            #cell17{
-                &hover{
-                    .wallet-value__scene{
-                        
-                    }
-                }
+            #cell17:hover .wallet-value__scene{
+                
             }
-            #cell18{
-                &hover{
-                    .wallet-value__scene{
-                        
-                    }
-                }
+            #cell18:hover .wallet-value__scene{
+                
             }
-            #cell19{
-                &hover{
-                    .wallet-value__scene{
-                        
-                    }
-                }
+            #cell19:hover .wallet-value__scene{
+                
             }
-            #cell20{
-                &hover{
-                    .wallet-value__scene{
-                        
-                    }
-                }
+            #cell20:hover .wallet-value__scene{
+                
             }
-            #cell21{
-                &hover{
-                    .wallet-value__scene{
-                        
-                    }
-                }
+            #cell21:hover .wallet-value__scene{
+                
             }
-            #cell22{
-                &hover{
-                    .wallet-value__scene{
-                        
-                    }
-                }
+            #cell22:hover .wallet-value__scene{
+                
             }
-            #cell23{
-                &hover{
-                    .wallet-value__scene{
-                        
-                    }
-                }
+            #cell23:hover .wallet-value__scene{
+                
             }
-            #cell24{
-                &hover{
-                    .wallet-value__scene{
-                        
-                    }
-                }
+            #cell24:hover .wallet-value__scene{
+                
             }
-            #cell25{
-                &hover{
-                    .wallet-value__scene{
-                        
-                    }
-                }
+            #cell25:hover .wallet-value__scene{
+                
             }
         }
 
