--- a/01-HTML-CSS/09-animations/group - Or Noa Etan/style.scss
+++ b/01-HTML-CSS/09-animations/group - Or Noa Etan/style.scss
@@ -50,10 +50,11 @@ body {
           border-radius: 50%;
           background-color: rgb(167, 219, 236);
 
-          h {
+          h1 {
             margin-top: 12px;
             margin-left: 12px;
             font-weight: 700;
+            font-size: 15px;
           }
         }
 
